--- a/NewsList/pom.xml
+++ b/NewsList/pom.xml
@@ -8,10 +8,10 @@
   <dependencies>
 	
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>5.0.4.RELEASE</version>
-	  	</dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-core</artifactId>
+		    <version>5.2.4.RELEASE</version>
+		</dependency>
 	
 	  	<dependency>
 			<groupId>org.springframework</groupId>
