--- a/NewsList/pom.xml
+++ b/NewsList/pom.xml
@@ -6,6 +6,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
+  <properties>
+  		<maven.compiler.target>1.8</maven.compiler.target>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
+  
   <dependencies>
 	
 		<dependency>
@@ -32,20 +37,25 @@
 			<version>4.0.1</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
 		    <groupId>org.jsoup</groupId>
 		    <artifactId>jsoup</artifactId>
 		    <version>1.11.3</version>
 		</dependency>
 
-	   <!-- https://mvnrepository.com/artifact/junit/junit -->
 	    <dependency>
 	        <groupId>junit</groupId>
 	        <artifactId>junit</artifactId>
 	        <version>4.12</version>
 	        <scope>test</scope>
 	    </dependency>
+		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>
 		
   </dependencies>
 	 
