--- a/NewsList/pom.xml
+++ b/NewsList/pom.xml
@@ -7,6 +7,8 @@
   <packaging>war</packaging>
   
   <properties>
+  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  		<failOnMissingWebXml>false</failOnMissingWebXml>
   		<maven.compiler.target>1.8</maven.compiler.target>
     	<maven.compiler.source>1.8</maven.compiler.source>
   </properties>
@@ -26,6 +28,13 @@
 		</dependency>
 	
 		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>5.2.4.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
+	
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
@@ -40,7 +49,7 @@
 		<dependency>
 		    <groupId>org.jsoup</groupId>
 		    <artifactId>jsoup</artifactId>
-		    <version>1.11.3</version>
+		    <version>1.13.1</version>
 		</dependency>
 
 	    <dependency>
