--- a/NewsList/pom.xml
+++ b/NewsList/pom.xml
@@ -14,7 +14,6 @@
   </properties>
   
   <dependencies>
-	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -66,6 +65,12 @@
 		    <scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<optional>true</optional>
+		</dependency>
   </dependencies>
 	 
 	<build>
